<resources>
    <string name="app_name">SoloLifeProject</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="anonymous">비회원 로그인</string>
    <string name="email">이메일을 입력해주세요</string>
    <string name="password">비밀번호를 입력해주세요</string>
    <string name="complete_login">로그인하기</string>
    <string name="password_check">비밀번호를 한번 더 입력해주세요</string>
    <string name="complete_register">회원가입하기</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>